SALO10-238 add log on all methods
