# packages/server/api.yaml
@@ -15,12 +15,12 @@ securityDefinitions:
     description: |
      For accessing the API a valid JWT token must be passed in all the queries in
      the 'Authorization' header.
-  
+
      A valid JWT token is generated by the API and retourned as answer of a call
      to the route /login giving a valid user & password.
-  
+
      The following syntax must be used in the 'Authorization' header :
-  
+
          Bearer xxxxxx.yyyyyyy.zzzzzz
 
 paths:
@@ -130,31 +130,6 @@ paths:
             allOf:
               - $ref: '#/definitions/ResponseStatus'
               - $ref: '#/definitions/Error'
-    delete:
-      x-swagger-router-controller: program
-      operationId: "deleteProgram"
-      summary: Delete a program
-      security:
-        - Bearer: []
-      description: N/A
-      parameters:
-        - in: path
-          name: id
-          description: ID of program to be deleted
-          required: true
-          type: string
-      responses:
-        200:
-          description: Success
-          schema:
-            allOf:
-              - $ref: '#/definitions/ResponseStatus'
-        default:
-          description: Invalid request.
-          schema:
-            allOf:
-              - $ref: '#/definitions/ResponseStatus'
-              - $ref: '#/definitions/Error'
     put:
       x-swagger-router-controller: program
       operationId: "updateProgram"
@@ -172,6 +147,38 @@ paths:
           name: body
           schema:
             $ref: '#/definitions/ProgramBody'
+      responses:
+        200:
+          description: Success
+          schema:
+            allOf:
+              - $ref: '#/definitions/ResponseStatus'
+        default:
+          description: Invalid request.
+          schema:
+            allOf:
+              - $ref: '#/definitions/ResponseStatus'
+              - $ref: '#/definitions/Error'
+
+  /program/{id}/{userId}:
+    delete:
+      x-swagger-router-controller: program
+      operationId: "deleteProgram"
+      summary: Delete a program
+      security:
+        - Bearer: []
+      description: N/A
+      parameters:
+        - in: path
+          name: id
+          description: ID of program to be deleted
+          required: true
+          type: string
+        - in: path
+          name: userId
+          description: ID of user
+          required: true
+          type: string
       responses:
         200:
           description: Success
@@ -253,7 +260,7 @@ paths:
       security:
         - Bearer: []
       description: This will be used to populate the insert and update dropdowns
-      
+
       produces:
         - application/json
       responses:
